price list update

--- a/index.html
+++ b/index.html
@@ -155,6 +155,60 @@
             </div>
         </div>
     </div>
+<!--PRICE LIST-->
+    <div class="container-fluid py-5 bg-dark">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 text-center">
+                <h3 class="text-light">Pricing List</h3>
+                <img src="images/divider-silver.png" alt="divider" class="pb-4 w-25">
+            </div>
+        </div>
+        <div class="row my-4">
+            <div class="col-sm-8">
+                <img src="images/massage.jpg" alt="massage pic">
+            </div>
+            <div class="col-sm-4">
+                <h4 class="title text-center">Massages</h4>
+                <ul class="list-group list-group-flush text-light">
+                    <li class="list-group-item">Massage 1 <em>-$10</em></li>
+                    <li class="list-group-item">Massage 2 <em>-$10</em></li>
+                    <li class="list-group-item">Massage 3 <em>-$10</em></li>
+                    <li class="list-group-item">Massage 4 <em>-$10</em></li>
+                    <li class="list-group-item">Massage 5 <em>-$10</em></li>
+                </ul>
+            </div>       
+        </div>
+        <div class="row my-4">
+            <div class="col-sm-4">
+                <h4 class="title text-center">Facials</h4>
+                <ul class="list-group list-group-flush text-light">
+                    <li class="list-group-item">Facials 1 <em>-$10</em></li>
+                    <li class="list-group-item">Facials 2 <em>-$10</em></li>
+                    <li class="list-group-item">Facials 3 <em>-$10</em></li>
+                    <li class="list-group-item">Facials 4 <em>-$10</em></li>
+                    <li class="list-group-item">Facials 5 <em>-$10</em></li>
+                </ul>
+            </div> 
+            <div class="col-sm-8">
+                <img src="images/facial.jpg" alt="massage pic">
+            </div> 
+        </div>
+        <div class="row my-4">
+            <div class="col-sm-8">
+                <img src="images/cosmetics.jpg" alt="massage pic">
+            </div>
+            <div class="col-sm-4">
+                <h4 class="title text-center">Hair &amp; make-up</h4>
+                <ul class="list-group list-group-flush text-light">
+                    <li class="list-group-item">Hair style 1 <em>-$10</em></li>
+                    <li class="list-group-item">Hair style 2 <em>-$10</em></li>
+                    <li class="list-group-item">Hair style 3 <em>-$10</em></li>
+                    <li class="list-group-item">Hair style 4 <em>-$10</em></li>
+                    <li class="list-group-item">Hair style 5 <em>-$10</em></li>
+                </ul>
+            </div>       
+        </div>
+    </div>  <!--container-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
