--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,83 @@
             </div>
         </section>
     </header>
-
+<!--BLOG SECTION-->
+    <main class="container-fluid py-5">
+        <div class="row">
+            <div class="col-sm-8">
+                <div>
+                    <h2>New feature</h2>
+                    <p>March 01, 2020 by <a href="">Ronnie</a></p>
+                    <div class="pb-2">
+                        <i class="fas fa-tags"></i>
+                        <p class="d-inline">Tagged: news ~ offers</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit a placeat similique explicabo sit. Reiciendis hic, doloribus inventore 
+                        quae ullam architecto optio odit non, eligendi voluptates earum facilis 
+                        id obcaecati!</p>
+                </div>
+                <div>
+                    <h2>New feature</h2>
+                    <p>March 01, 2020 by <a href="">Ronnie</a></p>
+                    <div class="pb-2">
+                        <i class="fas fa-tags"></i>
+                        <p class="d-inline">Tagged: news ~ offers</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit a placeat similique explicabo sit. Reiciendis hic, doloribus inventore 
+                        quae ullam architecto optio odit non, eligendi voluptates earum facilis 
+                        id obcaecati!</p>
+                </div>
+                <div>
+                    <h2>New feature</h2>
+                    <p>March 01, 2020 by <a href="">Ronnie</a></p>
+                    <div class="pb-2">
+                        <i class="fas fa-tags"></i>
+                        <p class="d-inline">Tagged: news ~ offers</p>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit a placeat similique explicabo sit. Reiciendis hic, doloribus inventore 
+                        quae ullam architecto optio odit non, eligendi voluptates earum facilis 
+                        id obcaecati!</p>
+                </div>
+                <nav>
+                    <ul class="nav">
+                        <li>Next Page</li> &nbsp;
+                        <li>Previous Page</li>
+                    </ul>
+                </nav>
+            </div>
+            <aside class="col-sm-4">
+                <div class="py-3">
+                    <h4 class="font-italic">About</h4>
+                    <p class="mb-0">Welcome to the official Tranquil Spa blog.
+                         Here you will find all the latest news and what's going on here at the spa.
+                        <hr>
+                    </p>
+                    </div>
+                    <div class="py-3">
+                        <h4 class="font-italic">Archives</h4>
+                        <ol class="list-unstyled mb-0">
+                            <li><a href="">March 2020</a></li>
+                            <li><a href="">Febuary 2020</a></li>
+                            <li><a href="">January 2020</a></li>
+                        </ol>
+                    </div>
+                    <div class="py-3">
+                       <h4 class="font-talic">Categories</h4> 
+                       <ol class="list-unstyled mb-0">
+                            <li><a href="">News</a></li>
+                            <li><a href="">Offers</a></li>
+                       </ol>
+                    </div>
+                    <div class="py-3">
+                        <h4 class="font-italic">Followers</h4>
+                        <i class="fab fa-facebook-square fa-2x"></i>
+                        <i class="fab fa-twitter-square fa-2x"></i>
+                        <i class="fab fa-instagram-square fa-2x"></i>
+                        <i class="fab fa-pinterest-square fa-2x"></i>
+                    </div>
+                </aside>
+        </div><!--/row-->
+    </main>
 
     <!--FOOTER SECTION-->
     <footer class="container-fluid py-5">
